# gemini-law-compiler

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: tests.yml
.spec/: spec.md
data/: bicycle_fine_table.json
docs/: unit_test_spec.md
src/: config.py  main.py
src/benchmark/: flash_only_judge.py
src/judgement/: hybrid_judge.py
src/matcher/: vsm_engine.py
src/parser/: legal_compiler.py
tests/: conftest.py  test_flash_only_judge.py  test_hybrid_judge.py  test_legal_compiler.py  test_vsm_engine.py
tests/fixtures/: sample_law.xml
